bugfix: use java.util.Base64 instead of JAXB classes
fixes a ClassNotFoundException on tomcat8. also, there is no reason to
use libraries when there's a core JRE class for the same thing.